styles/multimedia.css
/*
 * multimedia.css
 *
 * CSS IMAGES LEVEL 4 - https://drafts.csswg.org/css-images-4
 * MDN - https://developer.mozilla.org/en-US/docs/Learn/Performance/Multimedia
 *   - border-image - https://developer.mozilla.org/en-US/docs/Web/CSS/border-image
 * Media type & format guide - https://developer.mozilla.org/en-US/docs/Web/Media/Formats
 * <img> - https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img
 * <picture> element - https://developer.mozilla.org/en-US/docs/Web/HTML/Element/picture
 * Responsive Images
 *  - https://developer.mozilla.org/en-US/docs/Learn/HTML/Multimedia_and_embedding/Responsive_images
 *  - https://www.smashingmagazine.com/2014/05/responsive-images-done-right-guide-picture-srcset/
 * Web Performance - https://developer.mozilla.org/en-US/docs/Web/Performance
 * Lazy Loading - https://developer.mozilla.org/en-US/docs/Web/Performance/Lazy_loading
*/
/* https://addyosmani.com/blog/lazy-loading/ */
[loading=lazy] {}

[loading=eager] {}

iframe, img, svg, picture, figure, canvas, audio, video, embed, object {
  max-width: 100%;
  vertical-align: middle;
}
/* Replaced Elements - https://developer.mozilla.org/en-US/docs/Web/CSS/Replaced_element */
iframe, audio, video, embed, img {
  object-fit: contain;
  object-position: center center; /* https://developer.mozilla.org/en-US/docs/Web/CSS/object-position */
}
picture, figure, canvas, audio, video, embed, object {
  display: block;
  margin: var(--font-size);
}
audio, canvas, video, iframe[src*=youtube] {
  width: 90%;
  padding: 1ch;
  max-width: 65ch;
  background: inherit;
  aspect-ratio: 16 / 9;
  margin: var(--line-height) auto;
}
audio:hover, canvas:hover, video:hover, iframe[src*=youtube]:hover {
  background: currentColor;
}
img, svg {
  padding: var(--font-size);
}
svg/* overflow bug in IE10/11. https://github.com/twbs/bootstrap/issues/26878 */
  { overflow: hidden }
a img {
  opacity: 95%;
  background: Canvas;
}
a:hover img {
  opacity: 100%;
  background: buttonFace;
}
p img , p svg {
  float: left;
  padding-block-start: 0;
}
picture {}
blockquote picture {
  margin: 0 4ch 1.6182em;
}
figure {
  background: red;
}
figure img, iframe, picture img, audio, canvas, video {
  border-radius: 0.618em;
  box-shadow: var(--box-shadow);
}
figure img, picture img, figure picture {
  margin: 0;
  background: inherit;
}
figcaption::before {
  width: 1em;
  font-size: 1.618em;
  display: inline-block;
}
figcaption {
  opacity: 0.4;
}
figure:hover figcaption {
  opacity: 0.618;
}
canvas
  { background: Canvas }
iframe {
  display: block;
}
audio
  { /* https://blog.shahednasser.com/how-to-style-an-audio-element/ */ }
video
  { /* https://developer.mozilla.org/en-US/docs/Web/HTML/Element/video */ }

